--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -133,27 +133,27 @@ button{ font-size: 100%;}
 .circle{
     fill: none;
     stroke-width: 10;
-    stroke: #000;
+    /* stroke: #000; */
     transform: translate(5px,5px);
     stroke-dasharray: 190;
-    stroke-dashoffset: 190;
+    /* stroke-dashoffset: 190; */
 }
-.card-circle circle:nth-child(1){
+/* .card-circle circle:nth-child(1){
     stroke-dashoffset: 0;
     stroke: #f3f3f3;
 }
 .card-circle circle:nth-child(2){
     stroke-dashoffset: calc(190 - ((190*80)/100));
     stroke: #49d8a0;
-}
+} */
 
 .active-card .card-circle circle:nth-child(2){
-    stroke-dashoffset: calc(190 - ((190*80)/100));
+    /* stroke-dashoffset: calc(190 - ((190*80)/100)); */
     stroke: #d84981;
 }
 
 .project-card:hover circle:nth-child(2){
-    stroke-dashoffset: calc(190 - ((190*80)/100));
+    /* stroke-dashoffset: calc(190 - ((190*80)/100)); */
     stroke: #d84981;
 }
 
