Basic html and css for 'add projects' form

--- a/resources/css/responsive.css
+++ b/resources/css/responsive.css
@@ -291,6 +291,13 @@
     height: 8%;
     width: 96% !important;
   }
+  
+  /*-------------- Add projects popup -----*/
+  .popup {
+    padding: 10px;
+    width: 80%;
+    transform: translate(-50%, -50%);
+  }
 }
 
 /*---------- Mobile view ----------------*/
