--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -532,6 +532,7 @@ th {
   transform: translate(-50%, -50%);
   background-color: #fff;
   border-radius: 5px;
+  z-index: 99999;
 }
 .popup div {
   width: 100%;
