--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -428,10 +428,9 @@ footer {
 }
 td,
 th {
-  -webkit-box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.3);
-  box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.3);
-  border-radius: 5px;
-  padding: 8px 5px;
+  /* border-radius: 5px; */
+  padding: 8px 5px !important;
+  border: 1px solid #464648;
   -webkit-transition: all 0.2s ease;
   transition: all 0.2s ease;
 }
