--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -528,7 +528,7 @@ th {
   visibility: hidden;
   left: 50%;
   width: 500px;
-  height: 97%;
+  max-height: 97%;
   transform: translate(-50%, -50%);
   background-color: #fff;
   border-radius: 5px;
@@ -583,25 +583,29 @@ th {
 }
 
 .add-project-popup-btn,
-.edit-project-popup-btn {
+.edit-project-popup-btn,
+.add-resources-popup-btn {
   background-color: #49d8a0;
   transition: all 0.2s ease;
 }
 
 .add-project-popup-btn:hover,
-.edit-project-popup-btn:hover{
+.edit-project-popup-btn:hover,
+.add-resources-popup-btn:hover{
   transform: scale(1.01);
   box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.3);
 }
 
 .cancel-add-btn,
-.cancel-edit-btn {
+.cancel-edit-btn,
+.cancel-add-resources-btn {
   background-color: #d84981;
   transition: all 0.2s ease;
 }
 
 .cancel-add-btn:hover,
-.cancel-edit-btn:hover {
+.cancel-edit-btn:hover,
+.cancel-add-resources-btn:hover {
   transform: scale(1.01);
   box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.3);
 }
@@ -627,3 +631,13 @@ th {
 .autocomplete-active{
   display: block;
 } */
+
+.checkbox-container {
+  flex-direction: row;
+  align-items: center;
+}
+
+.checkbox-container label,
+.checkbox-container input{
+  margin: 0;
+}
