--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -584,28 +584,32 @@ th {
 
 .add-project-popup-btn,
 .edit-project-popup-btn,
-.add-resources-popup-btn {
+.add-resources-popup-btn,
+.edit-resources-popup-btn {
   background-color: #49d8a0;
   transition: all 0.2s ease;
 }
 
 .add-project-popup-btn:hover,
 .edit-project-popup-btn:hover,
-.add-resources-popup-btn:hover{
+.add-resources-popup-btn:hover,
+.edit-resources-popup-btn:hover{
   transform: scale(1.01);
   box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.3);
 }
 
 .cancel-add-btn,
 .cancel-edit-btn,
-.cancel-add-resources-btn {
+.cancel-add-resources-btn,
+.cancel-edit-resources-btn {
   background-color: #d84981;
   transition: all 0.2s ease;
 }
 
 .cancel-add-btn:hover,
 .cancel-edit-btn:hover,
-.cancel-add-resources-btn:hover {
+.cancel-add-resources-btn:hover,
+.cancel-edit-resources-btn:hover {
   transform: scale(1.01);
   box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.3);
 }
