--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -118,6 +118,11 @@ button {
   box-shadow: 6px 6px 8px rgba(0, 0, 0, 0.3);
 }
 
+.card-holder{
+  height: 80%;
+  overflow: scroll;
+}
+
 .project-card {
   margin: 20px 0;
   padding: 10px 20px;
