--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -95,14 +95,17 @@ button {
   margin-left: 20px;
 }
 
+.add-projects-label{
+  width: 100%;
+}
 .add-project-btn {
   margin-bottom: 10px;
+  margin-right: 10px;
   background-color: #49d8a0;
   border: none;
   border-radius: 5px;
   color: #fff;
-  padding: 10px;
-  width: 100%;
+  padding: 5px 12px;
   -webkit-box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.3);
   box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.3);
   cursor: pointer;
@@ -404,10 +407,14 @@ footer {
   text-align: left;
 }
 
+.add-resources-label{
+  width: 25%;
+}
+
 .add-resources-btn {
   border: 0;
-  padding: 10px 12px;
-  width: 25%;
+  padding: 5px 12px;
+  margin-right: 10px;
   background-color: #49d8a0;
   outline: none;
   cursor: pointer;
