--- a/resources/css/responsive.css
+++ b/resources/css/responsive.css
@@ -8,7 +8,7 @@
 
   .middle-tabs {
     width: 100%;
-    height: 70%;
+    height: 82%;
   }
 
   /*-------------- Side panel Navigation -----*/
@@ -84,7 +84,7 @@
 
   /*-------------- Footer ---------------*/
   footer {
-    height: 10%;
+    height: 5%;
     width: 97%;
   }
 }
@@ -141,7 +141,7 @@
 
   .middle-tabs {
     width: 100%;
-    height: 88%;
+    height: 95%;
   }
 
   /*-------------- Side panel Navigation -----*/
@@ -249,7 +249,7 @@
   }
 
   /*-------------- Resources tab ---------------*/
-  .add-resources-btn {
+  .add-resources-label {
     padding: 8px 10px;
     width: 50%;
   }
@@ -259,6 +259,10 @@
     width: -moz-fit-content;
     width: fit-content;
     padding: 8px 8px;
+  }
+
+  .resource-table-scroll{
+    height: 75% !important;  /* Override default scroll box height*/
   }
 
   /*-------------- Invoice tab ---------------*/
@@ -288,7 +292,7 @@
 
   /*-------------- Footer ---------------*/
   footer {
-    height: 8%;
+    height: 5%;
     width: 96% !important;
   }
   
@@ -331,7 +335,7 @@
 
   /*-------------- Footer ---------------*/
   footer {
-    height: 8%;
+    height: 5%;
     width: 95% !important;
   }
 }
