--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,5 +1,21 @@
+
+/* CSS DocumentProject: Project Management Dashboard
+----------------------------------------------------------------------------------------------------------*/
+
+/*------------------Layout,Table of Contents-----------------------------------------------------------------
+1. BASIC STUFF
+2. REUSED ITEMS
+3. SIDE PANEL
+4. MAIN PANEL
+5. FOOTER
+6. DETAILS TAB
+7. RESOURCES TAB
+8. INVOICE TAB
+9. PROJECT - POPUP
+-----------------------------------------------------------------------------------------------------------*/
+
 /* -------------------------------- */
-/* BASIC STUFF */
+/* ----- 1. BASIC STUFF ------------*/
 /* -------------------------------- */
 
 * {
@@ -27,7 +43,7 @@ html {
 
 
 /* -------------------------------- */
-/* REUSABLE */
+/* ----- 2. REUSED ITEMS -----------*/
 /* -------------------------------- */
 .flex-box {
   display: -webkit-box;
@@ -47,7 +63,6 @@ html {
   height: 100vh;
   width: 75%;
   background-color: #f6f7fb;
-  /* z-index: -2; */
 }
 
 .btn-red {
@@ -72,10 +87,10 @@ html {
 button {
   font-size: 100%;
 }
-/* -------------------------------- */
-/* SIDE PANEL */
-/* -------------------------------- */
 
+/* -------------------------------- */
+/* ----- 3. SIDE PANEL -------------*/
+/* -------------------------------- */
 .head-text-logo {
   padding: 10px;
   -webkit-box-align: center;
@@ -163,10 +178,7 @@ button {
 .card-circle circle {
   fill: none;
   stroke-width: 10;
-  /* stroke: #000; */
-
   -webkit-transform: translate(5px, 5px);
-
   transform: translate(5px, 5px);
   stroke-dasharray: 190;
   stroke-dashoffset: 190;
@@ -176,23 +188,20 @@ button {
   stroke: #f3f3f3;
 }
 .card-circle circle:nth-child(2) {
-  /* stroke-dashoffset: calc(190 - ((190*80)/100)); */
   stroke: #49d8a0;
 }
 
 .active-card .card-circle circle:nth-child(2) {
-  /* stroke-dashoffset: calc(190 - ((190*80)/100)); */
   stroke: #d84981;
 }
 
 .project-card:hover circle:nth-child(2) {
-  /* stroke-dashoffset: calc(190 - ((190*80)/100)); */
   stroke: #d84981;
 }
 
 /* -------------------------------- */
-/* MAIN PANEL */
-/* -------------------------------- */
+/* ----- 4. MAIN PANEL -------------*/
+/* ---------------------------------*/
 
 /*----- Header ---------------*/
 .mobile-hamburger {
@@ -225,7 +234,6 @@ header div {
 }
 
 h1 {
-  /* margin-top: 10px; */
   font-size: 150%;
 }
 
@@ -241,12 +249,12 @@ h1 {
   text-align: center;
   border-radius: 5px;
 }
+
 .slice-two p {
   margin-bottom: 10px;
 }
 
 /*----- Middle tabs ----------*/
-
 .middle-tabs {
   margin-top: 20px;
   width: 100%;
@@ -305,7 +313,9 @@ h1 {
   z-index: 999;
 }
 
-/*----- Footer ---------------*/
+/* -------------------------------- */
+/* ----- 5. FOOTER ------------*/
+/* -------------------------------- */
 footer {
   bottom: 0px;
   margin-bottom: 20px;
@@ -319,9 +329,8 @@ footer {
 }
 
 /* -------------------------------- */
-/* DETAILS TAB */
+/* ----- 6. DETAILS TAB ------------*/
 /* -------------------------------- */
-
 .tab-container {
   text-align: left;
 }
@@ -402,9 +411,8 @@ footer {
 }
 
 /* -------------------------------- */
-/* RESOURCES TAB */
+/* ----- 7. RESOURCES TAB ----------*/
 /* -------------------------------- */
-
 .tab-content {
   text-align: left;
 }
@@ -442,6 +450,7 @@ footer {
   color: #fff;
   text-align: center;
 }
+
 td,
 th {
   padding: 8px 5px !important; /* Required to overwrite bootstrap*/
@@ -457,7 +466,7 @@ th {
 }
 
 /* -------------------------------- */
-/* INVOICE TAB */
+/* ----- 8. INVOICE TAB ------------*/
 /* -------------------------------- */
 .generate-invoice-box {
   -webkit-box-align: center;
@@ -518,7 +527,7 @@ th {
 }
 
 /* -------------------------------- */
-/* ADD PROJECT POPUP */
+/* ----- 9. PROJECT - POPUP --------*/
 /* -------------------------------- */
 .add-project-line,
 .edit-project-line{
@@ -583,7 +592,6 @@ th {
 
 .group {
   flex-direction: column;
-  /* margin: 5px 0; */
 }
 
 .date-set-box div {
