--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,4 +1,3 @@
-
 /* CSS DocumentProject: Project Management Dashboard
 ----------------------------------------------------------------------------------------------------------*/
 
@@ -40,7 +39,6 @@ html {
   height: 0px;
   background: transparent;
 }
-
 
 /* -------------------------------- */
 /* ----- 2. REUSED ITEMS -----------*/
@@ -112,7 +110,7 @@ button {
   margin-left: 20px;
 }
 
-.add-projects-label{
+.add-projects-label {
   width: 100%;
 }
 .add-project-btn {
@@ -136,7 +134,7 @@ button {
   box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.3);
 }
 
-.card-holder{
+.card-holder {
   height: 70%;
   overflow: scroll;
 }
@@ -290,7 +288,7 @@ h1 {
 .tab-buttons button:hover {
   -webkit-transform: scale(1.01);
   transform: scale(1.01);
-  background-color: #49d8a0 !important;  /* To overwrite 'button-box buttons' color*/
+  background-color: #49d8a0 !important; /* To overwrite 'button-box buttons' color*/
   color: #fff;
   -webkit-box-shadow: 1px -1px 8px rgba(0, 0, 0, 0.3);
   box-shadow: 1px -1px 8px rgba(0, 0, 0, 0.3);
@@ -417,7 +415,7 @@ footer {
   text-align: left;
 }
 
-.add-resources-label{
+.add-resources-label {
   width: 25%;
 }
 
@@ -530,7 +528,7 @@ th {
 /* ----- 9. PROJECT - POPUP --------*/
 /* -------------------------------- */
 .add-project-line,
-.edit-project-line{
+.edit-project-line {
   margin-top: 5px;
 }
 
@@ -564,17 +562,17 @@ th {
   width: 100%;
 }
 
-.popup h3{
-  margin-top: 0; 
+.popup h3 {
+  margin-top: 0;
 }
 
-.popup p{
+.popup p {
   font-size: 90%;
   font-weight: 500;
   margin-left: 5px;
 }
 
-.popup label{
+.popup label {
   margin-top: 10px;
   font-weight: 500;
 }
@@ -629,7 +627,7 @@ th {
 .add-project-popup-btn:hover,
 .edit-project-popup-btn:hover,
 .add-resources-popup-btn:hover,
-.edit-resources-popup-btn:hover{
+.edit-resources-popup-btn:hover {
   transform: scale(1.01);
   box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.3);
 }
@@ -639,7 +637,7 @@ th {
 .cancel-add-resources-btn,
 .cancel-edit-resources-btn {
   background-color: #fff;
-  border:1px solid #d84981 !important;
+  border: 1px solid #d84981 !important;
   transition: all 0.2s ease;
 }
 
@@ -653,40 +651,39 @@ th {
   box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.3);
 }
 
-
 .checkbox-container {
   flex-direction: row;
   align-items: center;
 }
 
 .checkbox-container label,
-.checkbox-container input{
+.checkbox-container input {
   margin: 0;
 }
 
-.resource-buttons{
+.resource-buttons {
   margin-top: 25px;
   margin-bottom: 5px;
 }
 
-.tags-look .tagify__dropdown__item{
+.tags-look .tagify__dropdown__item {
   display: inline-block;
   border-radius: 3px;
-  padding: .3em .5em;
-  border: 1px solid #CCC;
-  background: #F3F3F3;
-  margin: .2em;
-  font-size: .85em;
+  padding: 0.3em 0.5em;
+  border: 1px solid #ccc;
+  background: #f3f3f3;
+  margin: 0.2em;
+  font-size: 0.85em;
   color: black;
   transition: 0s;
   z-index: 999999999;
 }
 
-.tags-look .tagify__dropdown__item--active{
+.tags-look .tagify__dropdown__item--active {
   color: black;
 }
 
-.tags-look .tagify__dropdown__item:hover{
+.tags-look .tagify__dropdown__item:hover {
   background: lightyellow;
   border-color: gold;
 }
