Handles errors if no data available

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -688,3 +688,24 @@ th {
   background: lightyellow;
   border-color: gold;
 }
+
+/* -------------------------------- */
+/* ----- 9. SERVER ERROR MESSAGES --*/
+/* -------------------------------- */
+.no-data-div-resource,
+.no-data-div-details{
+  width: 100%;
+  text-align: center;
+}
+
+.no-data-div-resource img,
+.no-data-div-details img{
+  height: 150px;
+  width: auto;
+}
+
+.no-data-div-resource p,
+.no-data-div-details p{
+  color: #464648;
+  font-weight: 500;
+}
