--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -101,7 +101,11 @@ button {
   width: 50px;
   height: 50px;
   border-radius: 50px;
-  background-color: #d84981;
+}
+
+.logo img{
+  width: 50px;
+  height: 50px;
 }
 
 .head-text-logo p {
