--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -539,6 +539,7 @@ th {
 .total-amount-label {
   margin-top: 15px;
   font-weight: 700;
+  text-align: right;
 }
 .total-amount {
   font-weight: 300;
