--- a/resources/css/responsive.css
+++ b/resources/css/responsive.css
@@ -78,7 +78,6 @@
     -webkit-box-pack: justify;
     -ms-flex-pack: justify;
     justify-content: space-between;
-    padding: 20px 20px;
   }
   .slice-two {
     display: none;
@@ -113,6 +112,18 @@
     width: 100%;
     padding: 0px 5px;
   }
+
+  .nav-links {
+    margin-bottom: 5px;
+  }
+
+  .nav-links a{
+    font-size: 90%;
+  }
+
+  h1 {
+  font-size: 120%;
+}
 
   .date-box {
     margin-top: 0px;
@@ -205,7 +216,6 @@
     -webkit-box-pack: justify;
     -ms-flex-pack: justify;
     justify-content: space-between;
-    padding: 20px 20px;
   }
   .slice-two {
     display: none;
