--- a/resources/css/responsive.css
+++ b/resources/css/responsive.css
@@ -88,6 +88,11 @@
     height: 5%;
     width: 97%;
   }
+
+  /*-------------- Preloader ------------*/  
+  .preloader-box{
+    left: 40%;
+  }
 }
 
 /*-----------------------------------*/
