Style added for navigation

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -256,6 +256,11 @@ header div {
   list-style: none;
 }
 
+.nav-links li{
+  display: inline-block;
+  margin-right: 10px;
+}
+
 .nav-links a{
   text-decoration: none;
   color: #fff;
